finsh every thing about section_2 and fix an overflow with the a side on Mobile

--- a/src/components/SideBar/SideBarM.scss
+++ b/src/components/SideBar/SideBarM.scss
@@ -110,3 +110,9 @@
     margin-left: 30px;
   }
 }
+
+@media (max-width: 450px) {
+  .SideBar{
+    width: 90% !important;
+  }
+}
